k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: playwright-framework
  labels:
    name: playwright-framework
    app: playwright-test-framework
